--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@remix-run/cloudflare": "^2.15.2",
     "@remix-run/cloudflare-pages": "^2.15.2",
     "@remix-run/node": "^2.15.2",
-    "@remix-run/react": "^2.15.2",
+    "@remix-run/react": "^2.15.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@uiw/codemirror-theme-vscode": "^4.23.6",
     "@unocss/reset": "^0.61.9",
@@ -103,6 +103,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.476.0",
     "nanostores": "^0.10.3",
     "ollama-ai-provider": "^0.15.2",
     "path-browserify": "^1.0.1",
@@ -130,7 +131,8 @@
   "devDependencies": {
     "@blitz/eslint-plugin": "0.1.0",
     "@cloudflare/workers-types": "^4.20241127.0",
-    "@iconify-json/ph": "^1.2.1",
+    "@iconify-json/lucide": "^1.2.26",
+    "@iconify-json/ph": "^1.2.2",
     "@iconify/types": "^2.0.0",
     "@remix-run/dev": "^2.15.2",
     "@types/diff": "^5.2.3",
@@ -140,6 +142,7 @@
     "@types/path-browserify": "^1.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@unocss/preset-icons": "^0.61.9",
     "fast-glob": "^3.3.2",
     "husky": "9.1.7",
     "is-ci": "^3.0.1",
