Reverted back to original
Very buggy wait for an update

--- a/.env.example
+++ b/.env.example
@@ -3,28 +3,28 @@
 # Get your GROQ API Key here -
 # https://console.groq.com/keys
 # You only need this environment variable set if you want to use Groq models
-GROQ_API_KEY=your_groq_key_here
+GROQ_API_KEY=
 
 # Get your HuggingFace API Key here -
 # https://huggingface.co/settings/tokens
 # You only need this environment variable set if you want to use HuggingFace models
-HuggingFace_API_KEY=your_huggingface_key_here
+HuggingFace_API_KEY=
 
 
 # Get your Open AI API Key by following these instructions -
 # https://help.openai.com/en/articles/4936850-where-do-i-find-my-openai-api-key
 # You only need this environment variable set if you want to use GPT models
-OPENAI_API_KEY=your_openai_key_here
+OPENAI_API_KEY=
 
 # Get your Anthropic API Key in your account settings -
 # https://console.anthropic.com/settings/keys
 # You only need this environment variable set if you want to use Claude models
-ANTHROPIC_API_KEY=your_anthropic_key_here
+ANTHROPIC_API_KEY=
 
 # Get your OpenRouter API Key in your account settings -
 # https://openrouter.ai/settings/keys
 # You only need this environment variable set if you want to use OpenRouter models
-OPEN_ROUTER_API_KEY=your_openrouter_key_here
+OPEN_ROUTER_API_KEY=
 
 # Get your Google Generative AI API Key by following these instructions -
 # https://console.cloud.google.com/apis/credentials
@@ -34,22 +34,22 @@ GOOGLE_GENERATIVE_AI_API_KEY=
 # You only need this environment variable set if you want to use oLLAMA models
 # DONT USE http://localhost:11434 due to IPV6 issues
 # USE EXAMPLE http://127.0.0.1:11434
-OLLAMA_API_BASE_URL=http://127.0.0.1:11434
+OLLAMA_API_BASE_URL=
 
 # You only need this environment variable set if you want to use OpenAI Like models
 OPENAI_LIKE_API_BASE_URL=
 
 # You only need this environment variable set if you want to use Together AI models
-TOGETHER_API_BASE_URL=your_together_base_url_here
+TOGETHER_API_BASE_URL=
 
 # You only need this environment variable set if you want to use DeepSeek models through their API
-DEEPSEEK_API_KEY=your_deepseek_key_here
+DEEPSEEK_API_KEY=
 
 # Get your OpenAI Like API Key
 OPENAI_LIKE_API_KEY=
 
 # Get your Together API Key
-TOGETHER_API_KEY=your_together_key_here
+TOGETHER_API_KEY=
 
 # You only need this environment variable set if you want to use Hyperbolic models
 #Get your Hyperbolics API Key at https://app.hyperbolic.xyz/settings
@@ -76,7 +76,7 @@ LMSTUDIO_API_BASE_URL=
 # Get your xAI API key
 # https://x.ai/api
 # You only need this environment variable set if you want to use xAI models
-XAI_API_KEY=your_xai_key_here
+XAI_API_KEY=
 
 # Get your Perplexity API Key here - 
 # https://www.perplexity.ai/settings/api
@@ -92,7 +92,7 @@ PERPLEXITY_API_KEY=
 #   - sessionToken (optional): Temporary session token if using an IAM role or temporary credentials.
 # Example JSON:
 # {"region": "us-east-1", "accessKeyId": "yourAccessKeyId", "secretAccessKey": "yourSecretAccessKey", "sessionToken": "yourSessionToken"}
-AWS_BEDROCK_CONFIG={"region": "your-region", "accessKeyId": "your-access-key", "secretAccessKey": "your-secret-key"}
+AWS_BEDROCK_CONFIG=
 
 # Include this environment variable if you want more logging for debugging locally
 VITE_LOG_LEVEL=debug
@@ -103,4 +103,4 @@ VITE_LOG_LEVEL=debug
 # DEFAULT_NUM_CTX=24576 # Consumes 32GB of VRAM
 # DEFAULT_NUM_CTX=12288 # Consumes 26GB of VRAM
 # DEFAULT_NUM_CTX=6144 # Consumes 24GB of VRAM
-DEFAULT_NUM_CTX=32768
+DEFAULT_NUM_CTX=
